--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "my-jira-dev-tool",
-  "version": "1.6.93",
-  "description": "React + TS JIRA 开发者工具",
-  "author": "sindu12jun",
+  "version": "1.6.88",
+  "description": "React + TS JIRA Developer Tool",
+  "author": "sindu12jun, uimm258",
   "license": "MIT",
-  "repository": "sindu12jun/jira-dev-tool3",
+  "repository": "uimm258/my-jira-dev-tool, sindu12jun/jira-dev-tool3",
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
   "source": "src/index.tsx",
